k8s/flight-ms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-ms-backend-app-deployment
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: user-ms-backend-tier
  template:
    metadata:
      labels:
        app: user-ms-backend-tier
    spec:
      containers:
        - name: flight-ms-backend
          image: srthealikk/flight-ms:20241219090544
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
