k8s/notification-ms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-ms-backend-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-ms-backend-tier
  template:
    metadata:
      labels:
        app: notification-ms-backend-tier
    spec:
      containers:
        - name: notification-ms-backend
          image: srthealikk/flight-notification-ms:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
