k8s/user-ms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms-backend-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-ms-backend-tier
  template:
    metadata:
      labels:
        app: user-ms-backend-tier
    spec:
      containers:
        - name: user-ms-backend
          image: srthealikk/user-ms:20241214084355
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
